[package]
name = "learning_webpki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.20"
once_cell = "1.19.0"
rcgen = { version = "0.12.1", features = ["pem", "x509-parser"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "macros"] }
