[package]
name = "learning_webpki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
actix-web-actors = "4.3.0"
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
ed25519-dalek = "2.1.1"
env_logger = "0.11.2"
log = "0.4.20"
once_cell = "1.19.0"
rcgen = { version = "0.12.1", features = ["pem", "x509-parser"] }
rustls = "0.22.2"
rustls-webpki = "0.102.2"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs", "macros", "net"] }
tokio-rustls = "0.25.0"
